Acomodar todo el código y las clases y las carpetas en el  ruta que van