@@ -1,12 +1,12 @@
 package com.example.clean_pedidos.usecase.impl;
 
 import com.example.clean_pedidos.adapter.in.web.dto.PedidoResponse;
-import com.example.clean_pedidos.domain.entity.Pedido;
 import com.example.clean_pedidos.domain.valueobject.PedidoId;
 import com.example.clean_pedidos.usecase.ConsultarPedidoUseCase;
 import com.example.clean_pedidos.usecase.port.PedidoRepositoryPort;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ConsultarPedidoService implements ConsultarPedidoUseCase {
 
@@ -18,18 +18,16 @@ public class ConsultarPedidoService implements ConsultarPedidoUseCase {
 
     @Override
     public PedidoResponse buscarPorId(PedidoId id) {
-
-        Pedido p = repo.buscarPorId(id)
-                .orElseThrow(() -> new RuntimeException("Pedido no encontrado"));
-
-        return PedidoResponse.from(p);
+        return repo.buscarPorId(id)
+                .map(PedidoResponse::fromDomain)
+                .orElseThrow();
     }
 
     @Override
     public List<PedidoResponse> listarTodos() {
         return repo.buscarTodos()
                 .stream()
-                .map(PedidoResponse::from)
-                .toList();
+                .map(PedidoResponse::fromDomain)
+                .collect(Collectors.toList());
     }
 }
